miniconf/tests/ui/enum-named.stderr
error: Unsupported shape `named fields`. Expected unnamed fields or no fields.
 --> tests/ui/enum-named.rs:3:10
  |
3 | #[derive(Tree)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `Tree` (in Nightly builds, run with -Z macro-backtrace for more info)
